More tests fixed